tests/should_fail/illegal.kt
public class enum Direction {
  NORTH, SOUTH, WEST, EAST;
}

infix inline fun illegal() {
  println("These modifiers don't work in k0!") 
}
